# runtime

./: .cz.toml  .editorconfig  .gitignore  .prettierignore  CHANGELOG.md  README.md  package-lock.json  package.json
.claude/skills/local-gates/: SKILL.md
.claude/skills/ship-pitch/: SKILL.md
.claude/skills/start-pitch/: SKILL.md
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  core.py  db.py  dependencies.py  main.py  state.py
apps/api/app/models/: __init__.py  common.py  organizer.py  profile.py  race.py
apps/api/app/repositories/: races.py
apps/api/app/routes/: health.py  races.py
apps/api/app/scripts/: __init__.py  import_races.py
apps/api/data/: README.md  races.sample.csv
apps/api/tests/: test_health.py  test_import_races.py  test_models.py  test_races.py
apps/web/: .env.example  eslint.config.mjs  instrumentation-client.ts  instrumentation.ts  next.config.ts  package.json  playwright.config.ts  sentry.edge.config.ts  sentry.server.config.ts
apps/web/app/: global-error.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/lib/: plausible.ts  (+1 more)
docs/architecture/: 001-stack-decisions.md
docs/planning/: Betting Table.md  In Cycle.md  Released.md  _about.md
docs/product-design/: 001-product-vision.md  002-design-brief.md  003-pilot-scope.md  004-design-system-and-screens.md
supabase/: config.toml  seed.sql
supabase/migrations/: 20260602162437_race_data_model.sql  20260603134120_race_model_refinements.sql
(+46 files in other folders)
